fixed slider bug on mobile

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -152,6 +152,7 @@ ul {
     right: 0;
     max-width: 100%;
     overflow: hidden;
+    visibility: hidden;
     // overflow-y: scroll;
     .progressBarContainer div {
       display: block;
