--- a/sass/_responsive.scss
+++ b/sass/_responsive.scss
@@ -50,6 +50,7 @@
       width: 100%;
       position: unset;
       z-index: unset;
+      visibility: visible;
       .slider {
         width: 500px;
       }
